--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <center>
         <div class="game">
-            <h1>Number Guessing Game</h1>
+            <h1>Number Guessing Game present here</h1>
             <p class="line1">Guess a number between 1-15.</p>
             <div>
                 <input type="text" id="guessField">
